@@ -3,7 +3,9 @@ Section: utils
 Priority: extra
 Maintainer: Jonathan Nieder <jrnieder@gmail.com>
 Uploaders: Mohammed Adnène Trojette <adn+deb@diwi.org>
-Build-Depends: debhelper (>= 7.3.0), autotools-dev, doxygen
+Build-Depends: debhelper (>= 7.3.0), doxygen,
+	autoconf, automake, libtool, gettext
+Build-Conflicts: autoconf2.13, automake1.4
 Standards-Version: 3.8.2
 Vcs-Browser: http://git.debian.org/?p=collab-maint/xz.git
 Vcs-Git: git://git.debian.org/collab-maint/xz.git
